--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ main {
   display: flex;
   align-items: center;
   flex-direction: column;
+  border: 1px solid #ccc;
   justify-content: center;
 }
 .agent {
