--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
   font-weight: 600;
-  color: rgb(0, 128, 128);
+  color: #00755e;
   margin: 0;
   padding: 0;
 }
@@ -19,18 +19,81 @@ header {
   padding: 0 20px;
   border-bottom: 1px solid rgb(200, 180, 150);
 }
+.wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+#loginSection {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#login {
+  flex-grow: 1;
+  box-sizing: border-box;
+  background-color: #fdf5e6;
+  border: 1px solid black;
+  padding: 2rem;
+  min-height: 60%;
+  height: 30em;
+  width: 90%;
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+
+#loginForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+}
+
+#loginForm input {
+  width: 100%;
+  margin-bottom: 1.5rem;
+  padding: 0.5rem;
+  font-size: 1rem;
+}
+#loginForm button {
+  height: 2.5rem;
+  width: 8rem;
+  background-color: azure;
+  border-radius: 10px;
+  border: none;
+  font-size: 1rem;
+}
+#loginForm button:hover {
+  background-color: green;
+  color: #e1ffc7;
+}
+
 .logo {
   display: flex;
   align-items: center;
 }
+.loginlogo {
+  margin: 1rem;
+  padding: 1rem;
+}
+
 nav ul {
   display: flex;
-  gap: 15px;
+  gap: 1rem;
   list-style-type: none;
 }
 nav ul li a {
   text-decoration: none;
-  border: 2px solid rgb(200, 180, 150);
+  border: none;
   padding: 8px 16px;
   border-radius: 50px;
   transition: all 0.3s ease;
@@ -44,6 +107,7 @@ hr {
   margin: 20px 0;
 }
 main {
+  flex: 1;
   display: flex;
   justify-content: space-between;
   align-items: stretch; /* Makes all children same height */
@@ -191,7 +255,7 @@ footer {
   justify-content: center;
   margin: 15px 0 15px 0;
   padding-top: 15px 0 15px 0;
-  height: 9vh;
+  height: 10vh;
   box-sizing: border-box;
   width: 100%;
   background-color: #d4606011;
