--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
   font-weight: 600;
-  color: #00755e;
+  color: #004b49;
   margin: 0;
   padding: 0;
 }
@@ -107,6 +107,7 @@ hr {
   margin: 20px 0;
 }
 main {
+  margin-top: 3rem;
   flex: 1;
   display: flex;
   justify-content: space-between;
